# mdfa-key-value

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
app-mdfa-key-value/: CMakeLists.txt
app-mdfa-key-value/src/: main.cpp
cmake/: Pipeline.cmake
mdfa-key-value/: CMakeLists.txt
mdfa-key-value/include/: read-mdfa-kv.h  write-mdfa-kv.h
mdfa-key-value/src/: read-mdfa-kv.cpp  write-mdfa-kv.cpp
mdfa-key-value/test/: CMakeLists.txt
mdfa-key-value/test/include/: mdfa-key-value-tests.h
mdfa-key-value/test/src/: mdfa-key-value-tests.cpp
